fix: resolve broken layout in loginPage

--- a/style/login.css
+++ b/style/login.css
@@ -113,6 +113,8 @@ main{
 .mainWrap--loginForm--formItems > button{
     width: 355px;
     height: 33px;
+
+    margin-top: 10px;
     
     border: none;
     border-radius: 4px;
